<resources>
    <string name="app_name">Jakku</string>
    <string name="title_activity_sport_settings">SportSettings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="Training_header">Training</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="cardio_title">Cardio</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="_14_degrees_celcius">14 degrees celcius</string>
    <string name="how_long_is_each_session">How long is each session</string>
    <string name="answer_training_amount">Answer training amount</string>
    <string name="how_often_do_you_practice_per_week">How often do you practice per week</string>
    <string name="training_preferences">Training preferences</string>
    <string name="answer_training_duration">Answer_training_duration</string>
    <string name="save">save</string>
    <string name="saveStudy">save</string>
    <string name="study_preferences">Study preferences</string>
    <string name="how_many_study_sessions_do_you_have_in_a_day">How many study sessions do you have in a day?</string>
    <string name="home">Home</string>
    <string name="water_intake">Water Intake</string>
    <string name="exercises">Exercises</string>
    <string name="training_settings">Training settings</string>
    <string name="study_settings">Study settings</string>
    <string name="set_location">Set Location</string>
    <string name="todays_todo">Todays todo</string>
    <string name="this_is_about_to_be_updated">This is about to be updated</string>
    <string name="sun">Sun</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="mon">Mon</string>
    <string name="water_notification">Water Notification</string>
    <string name="workout_notification">Workout notification</string>
</resources>